feat: Add result images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <hr>
     </header>
     <div id="main">
-      <h2>Click the deck to reveal your cards. Click on the green hat guy
+      <h2>Click on the deck to get another card. Click on the green hat guy
         to stick and end the game.</h2>
       <h3 id="hdrTotal"></h3><h3 id="hdrResult"></h3>
       <div id="my_hand"></div>
@@ -28,10 +28,9 @@
         <div id="btnStick">
           <img src="img/stick_small.jpg" alt="stick button" onclick="game.stick()">
         </div>
+        <div id="result"><img src="" id="imgResult" alt="result image"></div>
       </div>
     </div>
-
-
 
     <script src="js/jquery-2.2.4.js"></script>
     <script src="js/app.js"></script>
