feat: Keep tally of total wins and losses

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         </div>
         <div id="result"><img src="" id="imgResult" alt="result image"></div>
       </div>
+      <div id="scores">
+        <h4 id="userWins"></h4>
+        <h4 id="dealerWins"></h4>
+      </div>
     </div>
 
     <script src="js/jquery-2.2.4.js"></script>
